# UnitFactory-School-42-

./: README.md
Fdf_Clion/: CMakeLists.txt
Fdf_Clion/minilibx/: ._=README=  ._Makefile  ._Makefile.gen  ._Makefile.mk  ._configure  ._man  ._mlx.h  ._mlx_clear_window.c  ._mlx_destroy_image.c  ._mlx_destroy_window.c  ._mlx_expose_hook.c  ._mlx_flush_event.c  ._mlx_get_color_value.c  ._mlx_get_data_addr.c  ._mlx_hook.c  ._mlx_init.c  ._mlx_int.h  ._mlx_int_anti_resize_win.c  ._mlx_int_do_nothing.c  ._mlx_int_get_visual.c  ._mlx_int_param_event.c  ._mlx_int_set_win_event_mask.c  ._mlx_int_str_to_wordtab.c  ._mlx_int_wait_first_expose.c  ._mlx_key_hook.c  ._mlx_lib_xpm.c  ._mlx_loop.c  ._mlx_loop_hook.c  ._mlx_mouse_hook.c  ._mlx_new_image.c  ._mlx_new_window.c  ._mlx_pixel_put.c  ._mlx_put_image_to_window.c  ._mlx_rgb.c  ._mlx_string_put.c  ._mlx_xpm.c  ._mlx_xpm.c.ok  ._rgb2c.pl  ._test
Fdf_Clion/minilibx/man/: ._man3
Fdf_Clion/minilibx/test/: ._Makefile.gen  ._Makefile.mk  ._main.c  ._new_win.c  ._open.xpm  ._open24.xpm  ._open30.xpm
Fdf_Clion/src/: ._fdf_color.c  ._fdf_error.c  backup.c  fdf.c  fdf.h  fdf_color.c  fdf_drawing_field.c  fdf_zoom.c
Fdf_Clion/src/minilibx/: ._=README=  ._Makefile  ._Makefile.gen  ._Makefile.mk  ._configure  ._man  ._mlx.h  ._mlx_clear_window.c  ._mlx_destroy_image.c  ._mlx_destroy_window.c  ._mlx_expose_hook.c  (+28 more)
Fdf_Clion/test_maps/: ._10-2.fdf  ._10-70.fdf  ._100-6.fdf  ._20-60.fdf  ._42.fdf  ._50-4.fdf  ._basictest.fdf  ._elem.fdf  ._mars.fdf  ._pentenegpos.fdf  ._plat.fdf  ._pnp_flat.fdf  ._pylone.fdf  ._pyra.fdf  ._pyramide.fdf
(+284 files in other folders)
