cmake_minimum_required(VERSION 3.6)
project(fdf)
file(GLOB SOURCES ./src/fdf.c ./src/fdf.h ./src/fdf_additional_ft.c ./src/fdf_creating_field.c
        ./src/fdf_drawing_field.c ./src/fdf_error.c ./src/fdf_zoom.c ./src/get_next_line.c ./src/get_next_line.h)
set(LIB_PATH libft)
#set(CMAKE_CXX_STANDARD 11)
set(HOME_FLAGS "-I /usr/X11/include -g -L /usr/X11/lib -lmlx -framework OpenGL -framework AppKit")
set(MACOS_FLAGS "-lmlx -framework OpenGL -framework AppKit")
set(CMAKE_C_FLAGS ${HOME_FLAGS})
set(SOURCE_FILES ${SOURCES})
include_directories("./libft/" "./inc")
add_executable(fdf ${SOURCE_FILES})
file(GLOB SOURCES_LIB ${LIB_PATH}/*.c)
add_library(ft STATIC ${SOURCES_LIB}/)
target_link_libraries(fdf ft)